// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveArticleFlag should render the base live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-bdVaJa bkSKmo"
      >
        <div
          class="sc-htpNat jcRSar"
        >
          <div
            class="sc-bxivhb hTEbzV"
          />
        </div>
        <span
          class="sc-bwzfXH crsvMm"
        >
          BASE
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the breaking article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-bdVaJa bkSKmo"
      >
        <div
          class="sc-htpNat jcRSar"
        >
          <div
            class="sc-bxivhb hTEbzV"
          />
        </div>
        <span
          class="sc-bwzfXH crsvMm"
        >
          BREAKING
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-bdVaJa bkSKmo"
      >
        <div
          class="sc-htpNat jcRSar"
        >
          <div
            class="sc-bxivhb hTEbzV"
          />
        </div>
        <span
          class="sc-bwzfXH crsvMm"
        >
          LIVE
        </span>
      </div>
    </div>
  </div>
</body>
`;
